apps/chatops/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatops-backend
  namespace: chatops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: rampo3/chatops-backend:latest
          ports:
            - containerPort: 8000
