apps/chatops/base/frontend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: chatops-frontend
  namespace: chatops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    blueGreen:
      activeService: frontend-active-service
      previewService: frontend-preview-service
      autoPromotionEnabled: false
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rampo3/chatops-frontend:latest
          ports:
            - containerPort: 3000
