apps/chatops/base/frontend-active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-active-service
  namespace: chatops
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
